<package format="2">
  <name>cuda_ros</name>

  <version>0.0.1</version>

  <description>
  This package is a ros warpper of CUDA API.
  </description>

  <maintainer email="x.yang@bristol.ac.uk">Xingrui Yang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
</package>