<package format="2">
  <name>simple_vo</name>

  <version>0.1.1</version>

  <description>
  A simple stateless Rgbd Odometry built on top of cuda_icp
  </description>

  <maintainer email="x.yang@bristol.ac.uk">Xingrui Yang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cuda_icp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cuda_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cuda_icp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cuda_ros</exec_depend>
</package>